--- a/_assets/stylesheets/_toc.scss
+++ b/_assets/stylesheets/_toc.scss
@@ -19,7 +19,7 @@
     margin-bottom: $gutter;
     border: 1px solid $border-color;
     @include media($medium) {
-      border-radius: $border-radius;
+      border-radius: 0;
     }
   }
   li {
