--- a/_assets/stylesheets/_sliding-menu.scss
+++ b/_assets/stylesheets/_sliding-menu.scss
@@ -39,7 +39,7 @@
   display: block;
   width: $button-size * 2;
   height: $button-size * 2;
-  background: $primary-color;
+  background: $bmjBlue;
   outline: 0;
   padding: 0;
   border: 2.5px solid transparent;
@@ -47,7 +47,7 @@
   z-index: 5;
   box-sizing: border-box;
   &:hover {
-    background: $bmjBlue;
+    background: $bmjBlueDarker;
   }
   transition: $sliding-menu-animation;
   &.slide {
