--- a/_includes/navigation-sliding.html
+++ b/_includes/navigation-sliding.html
@@ -1,5 +1,5 @@
 <nav role="navigation" id="js-menu" class="sliding-menu-content">
-  <h5>Made Mistakes <span>Table of Contents</span></h5>
+  <h5>BMJ-FEF <span>Table of Contents</span></h5>
   <ul class="menu-item">
     {% for link in site.data.navigation %}<li>
       <a href="{{ link.url }}">
